--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
     </div>
     </section>    
 
-	<!-- Modal -->
+	<!-- Modal Ивановец -->
 	<div id="myModal" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
@@ -301,6 +301,159 @@
 		</div>
 	</div>
 
+	<!-- Modal Галичанин-->
+	<div id="galich" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h3 id="myModalLabel">Галичанин</h3>
+		</div>
+		<div class="modal-body">
+			<table class="table table-striped table-hover">
+				<tr>
+					<th>№</th>
+					<th>Назначение</th>
+					<th>Каталожное название</th>
+				</tr>
+					<td>1.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-4572А.63.400-2-01А</td>
+				</tr>
+				<tr>
+					<td>2.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-4572А.63.900-2-02А</td>
+				</tr>
+				<tr>
+					<td>3.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-1.63.900</td>
+				</tr>
+				<tr>
+					<td>4.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-4.63.900-1</td>
+				</tr>
+				<tr>
+					<td>5.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-2.63.900</td>
+				</tr>
+				<tr>
+					<td>6.</td>
+					<td>Гидроцилиндр</td>
+					<td>Ц-21.000-1-02А</td>
+				</tr>
+			</table>
+		</div>
+		<div class="modal-footer">
+			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
+			<button class="mybtn">Заказать сейчас</button>
+		</div>
+	</div>
+
+	<!-- Modal Клинцы-->
+	<div id="klinci" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h3 id="myModalLabel">Клинцы</h3>
+		</div>
+		<div class="modal-body">
+			<table class="table table-striped table-hover">
+				<tr>
+					<th>№</th>
+					<th>Назначение</th>
+					<th>Каталожное название</th>
+				</tr>
+					<td>1.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1В.63.900-01</td>
+				</tr>
+				<tr>
+					<td>2.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45724-8.63.900-3К-1</td>
+				</tr>
+				<tr>
+					<td>3.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45724-8.63.900-2К-01</td>
+				</tr>
+				<tr>
+					<td>4.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-1.63.900</td>
+				</tr>
+				<tr>
+					<td>5.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-2.63.900</td>
+				</tr>
+				<tr>
+					<td>6.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-4.63.900-1</td>
+				</tr>
+			</table>
+		</div>
+		<div class="modal-footer">
+			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
+			<button class="mybtn">Заказать сейчас</button>
+		</div>
+	</div>
+
+	<!-- Modal chelab-->
+	<div id="chelab" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+		<div class="modal-header">
+			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+			<h3 id="myModalLabel">Челябинец (нет названий!)</h3>
+		</div>
+		<div class="modal-body">
+			<table class="table table-striped table-hover">
+				<tr>
+					<th>№</th>
+					<th>Назначение</th>
+					<th>Каталожное название</th>
+				</tr>
+					<td>1.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1В.63.900-01</td>
+				</tr>
+				<tr>
+					<td>2.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45724-8.63.900-3К-1</td>
+				</tr>
+				<tr>
+					<td>3.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45724-8.63.900-2К-01</td>
+				</tr>
+				<tr>
+					<td>4.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-1.63.900</td>
+				</tr>
+				<tr>
+					<td>5.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-2.63.900</td>
+				</tr>
+				<tr>
+					<td>6.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-4.63.900-1</td>
+				</tr>
+			</table>
+		</div>
+		<div class="modal-footer">
+			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
+			<button class="mybtn">Заказать сейчас</button>
+		</div>
+	</div>
+
     <section id="pricing" class="container pricing-anchor">
     	<div class="row pricing-table">
     		<div class="span12 pricing-column-center" style="padding-right: 5px; outline: 1px solid #c5c5c5;">
@@ -317,7 +470,7 @@
 					</div>
 					<div class="span3">
 						<div class="btn-kran">
-							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Челябинец</button>
+							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#chelab">Челябинец</button>
 						</div>
 					</div>
 					<div class="span3">
@@ -329,7 +482,7 @@
 				<div class="row " style="padding-top: 3%;">
     				<div class="span3">
 						<div class="btn-kran">
-							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Клинцы</button>
+							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#klinci">Клинцы</button>
 						</div>
 					</div>
 					<div class="span3">
@@ -339,7 +492,7 @@
 					</div>
 					<div class="span3">
 						<div class="btn-kran">
-							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#myModal">Другие модели</button>
+							<button id="send-contact" style="width: inherit;" data-toggle="modal" data-target="#galich">Другие модели</button>
 						</div>
 					</div>
 					<div class="span3">
