--- a/index.html
+++ b/index.html
@@ -751,15 +751,17 @@
 			<div class="span12 text-center">
                 <div class="alert">
                     <button type="button" class="close" data-dismiss="alert">&times;</button>
-                     <script id="bx24_form_inline" data-skip-moving="true">
-                                (function(w,d,u,b){w['Bitrix24FormObject']=b;w[b] = w[b] || function(){arguments[0].ref=u;
-                                        (w[b].forms=w[b].forms||[]).push(arguments[0])};
-                                        if(w[b]['forms']) return;
-                                        s=d.createElement('script');r=1*new Date();s.async=1;s.src=u+'?'+r;
-                                        h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
-                                })(window,document,'https://xsp24.bitrix24.ru/bitrix/js/crm/form_loader.js','b24form');
-                                b24form({"id":"6","lang":"ru","sec":"5i9aqu","type":"inline"});
-                            </script>
+					<div>
+                    <script id="bx24_form_inline" data-skip-moving="true">
+						(function(w,d,u,b){w['Bitrix24FormObject']=b;w[b] = w[b] || function(){arguments[0].ref=u;
+								(w[b].forms=w[b].forms||[]).push(arguments[0])};
+								if(w[b]['forms']) return;
+								s=d.createElement('script');r=1*new Date();s.async=1;s.src=u+'?'+r;
+								h=d.getElementsByTagName('script')[0];h.parentNode.insertBefore(s,h);
+						})(window,document,'https://xsp24.bitrix24.ru/bitrix/js/crm/form_loader.js','b24form');
+						b24form({"id":"6","lang":"ru","sec":"5i9aqu","type":"inline"});
+					</script>
+					</div>
                 </div>
             
 			</div>
