--- a/index.html
+++ b/index.html
@@ -41,18 +41,6 @@
 
   <body>
 	
-	<!--nav>
-    <div class="navbar navbar-static-top">
-      <div class="navbar-inner">
-        <div class="container">
-					<img src="img/logo-left.png">
-						<div class="pull-rigth">
-						<img src="img/logo-right.png">
-					</div>
-        </div>
-      </div>
-    </div>
-	</nav-->
 
 	<section>
 	<div class="container">
@@ -67,30 +55,6 @@
 	</div>
 	</section>	
 
-    <!--section id="newsletter">
-    <div class="container newsletter-anchor">
-	    <div class="row">
-	    	<div class="span8 offset2">
-	    	  <h2><i class="icon-envelope-alt"></i>Любой Ваш ТЕКСТ. Например: Хватить думать. Закажи прямо сейчас!</h2></div>
-	    </div>
-	    <div class="row">
-	    	<div class="span8 offset2 newsletter-form">
-	    		<form method="post" action="http://mmaedche.de/themeforest/themes/flatduplex/flatduplex/fdcc2424/submit-forms.php" id="newsletter-form">
-	              <div class="submit-field">
-	                <input class="submit" type="button" name="send-newsletter" id="send-newsletter" value="Заказать" />
-	              </div>
-	              <div class="email-field">
-	                <input class="email" type="text" placeholder="Введите свой Email" name="newsletter-email" />
-	              </div>
-	              <input type="hidden" name="type" value="newsletter" />
-	            </form>
-	    	</div>
-	    	<div class="span12">
-	    		<p class="text-center newsletter-info">Любой Ваш текст</p>
-	    	</div>
-	    </div>
-    </div>
-    </section-->
     
 	<section id="about">
     	<div class="container about-anchor">
@@ -119,20 +83,6 @@
 			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилинры выдвижения стрелы:</b></p>  
 			<!--a href="#" class="scroll" id="infoslider">Узнайте больше»</a-->
 			<div class="animated fadeInUp buttons-delay">
-				<!--ul>
-					<li>	КС-55713-1В.63.900-1	</li>
-					<li>	КС-45724-8.63.900-3К-01	</li>
-					<li>	КС-55713-1К-1.63.900	</li>
-					<li>	КС-55713-1К-2.63.900-2К	</li>
-					<li>	КС-55713-1К-2.63.900	</li>
-					<li>	КС-55713-1К-4.63.900-1	</li>
-					<li>	КС-55713-3К-4В.63.900	</li>
-					<li>	КС-65719-7К.63.900-1	</li>
-					<li>	КС-55713.1В.63.900-1А	</li>
-					<li>	ГЦ-150х125х7475	</li>
-					<li>	ГЦ-140х125х6000	</li>
-					<li>	ГЦ-125.100.6000.000-04	</li>
-				</ul-->
 				<table class="table" style="font-size: 20px;">
 					<tr> <td>КС-55713-1В.63.900-1</td> <td>206 500p</td> </tr>
 					<tr> <td>КС-45724-8.63.900-3К-01</td> <td>118 900p</td> </tr>
@@ -524,7 +474,7 @@
 			</div>
 			<div class="span3">
 				<p class="red">ВОЗВРАТ И ОБМЕН</p>
-				<p>Производим в соответсвии с законодательстовм РФ</p>
+				<p>Производим в соответсвии с законодательством РФ</p>
 			</div>
 		</div>
 		<div class="row">
