Челябинец, поменял названия ГЦ

--- a/index.html
+++ b/index.html
@@ -367,33 +367,33 @@
 					<th>Каталожное название</th>
 				</tr>
 					<td>1.</td>
-					<td>Гидроцилиндр</td>
-					<td>КС-55713-1В.63.900-01</td>
+					<td>Цилиндр подъема стрелы</td>
+					<td>КС-4572А.63.400-2-01А</td>
 				</tr>
 				<tr>
 					<td>2.</td>
 					<td>Гидроцилиндр</td>
-					<td>КС-45724-8.63.900-3К-1</td>
+					<td>КС-4572А.63.900-2-02А</td>
 				</tr>
 				<tr>
 					<td>3.</td>
 					<td>Гидроцилиндр</td>
-					<td>КС-45724-8.63.900-2К-01</td>
+					<td>КС-45717.31.300-1</td>
 				</tr>
 				<tr>
 					<td>4.</td>
 					<td>Гидроцилиндр</td>
-					<td>КС-55713-1К-1.63.900</td>
+					<td>КС-45717.31.300</td>
 				</tr>
 				<tr>
 					<td>5.</td>
-					<td>Гидроцилиндр</td>
-					<td>КС-55713-1К-2.63.900</td>
+					<td>Гидроопора</td>
+					<td>КС-45717.31.200-2</td>
 				</tr>
 				<tr>
 					<td>6.</td>
-					<td>Гидроцилиндр</td>
-					<td>КС-55713-1К-4.63.900-1</td>
+					<td>Цилиндр выдвижения средней секции стрелы</td>
+					<td>КС-45719.63.900-01А</td>
 				</tr>
 			</table>
 		</div>
