--- a/index.html
+++ b/index.html
@@ -357,7 +357,7 @@
 	<div id="chelab" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h3 id="myModalLabel">Челябинец (нет названий!)</h3>
+			<h3 id="myModalLabel">Челябинец</h3>
 		</div>
 		<div class="modal-body">
 			<table class="table table-striped table-hover">
@@ -372,17 +372,17 @@
 				</tr>
 				<tr>
 					<td>2.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр подъема стрелы</td>
 					<td>КС-4572А.63.900-2-02А</td>
 				</tr>
 				<tr>
 					<td>3.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр выдвижения опор</td>
 					<td>КС-45717.31.300-1</td>
 				</tr>
 				<tr>
 					<td>4.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр выдвижения опор</td>
 					<td>КС-45717.31.300</td>
 				</tr>
 				<tr>
@@ -398,7 +398,7 @@
 			</table>
 		</div>
 		<div class="modal-footer">
-			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
 			<button class="mybtn">Заказать сейчас</button>
 		</div>
