правки текста в таблице

--- a/index.html
+++ b/index.html
@@ -209,27 +209,27 @@
 				</tr>
 				<tr>
 					<td>3.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр выдвижения опор</td>
 					<td>КС-3574.31.300</td>
 				</tr>
 				<tr>
 					<td>4.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр выдвижения опор</td>
 					<td>КС-3574.31.300-2</td>
 				</tr>
 				<tr>
 					<td>5.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр выдвижения опор</td>
 					<td>КС-45717.31.300-1</td>
 				</tr>
 				<tr>
 					<td>6.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр подъема стрелы</td>
 					<td>КС-45717.63.400-4</td>
 				</tr>
 				<tr>
 					<td>7.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр выдвижения опор</td>
 					<td>КС-45721.31.300</td>
 				</tr>
 				<tr>
@@ -239,13 +239,43 @@
 				</tr>
 				<tr>
 					<td>9.</td>
-					<td>Гидроцилиндр</td>
+					<td>Цилиндр выдвижения верхней секции стрелы</td>
+					<td>КС-4572А.63.900-2-01А</td>
+				</tr>
+				<tr>
+					<td>10.</td>
+					<td>Цилиндр подъема стрелы</td>
+					<td>КС-4572А.63.400-2-01А</td>
+				</tr>
+				<tr>
+					<td>11.</td>
+					<td>Цилиндр выдвижения секции стрелы</td>
+					<td>КС-35714.63.900-04</td>
+				</tr>
+				<tr>
+					<td>12.</td>
+					<td>Цилиндр выдвижения секции стрелы</td>
+					<td>КС-4572А.63.900-2А</td>
+				</tr>
+				<tr>
+					<td>13.</td>
+					<td>Цилиндр подъема стрелы</td>
 					<td>КС-4572А.63.400-01-1</td>
+				</tr>
+				<tr>
+					<td>14.</td>
+					<td>Цилиндр выдвижения средней секции стрелы</td>
+					<td>КС-4572А.63.900-2-02А</td>
+				</tr>
+				<tr>
+					<td>15.</td>
+					<td>Цилиндр выдвижения верхней секции</td>
+					<td>КС-4572А.63.900-2-01А</td>
 				</tr>
 			</table>
 		</div>
 		<div class="modal-footer">
-			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
 			<button class="mybtn">Заказать сейчас</button>
 		</div>
@@ -296,7 +326,7 @@
 			</table>
 		</div>
 		<div class="modal-footer">
-			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
 			<button class="mybtn">Заказать сейчас</button>
 		</div>
@@ -340,14 +370,29 @@
 					<td>КС-55713-1К-2.63.900</td>
 				</tr>
 				<tr>
-					<td>6.</td>
+					<td>7.</td>
 					<td>Гидроцилиндр</td>
 					<td>КС-55713-1К-4.63.900-1</td>
+				</tr>
+				<tr>
+					<td>8.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55713-1К-4.63.900</td>
+				</tr>
+				<tr>
+					<td>9.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-45719.63.900-01А</td>
+				</tr>
+				<tr>
+					<td>10.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-4572А.63.900-2-01А</td>
 				</tr>
 			</table>
 		</div>
 		<div class="modal-footer">
-			<p>Стоимость деталей можно уточнить у наших менеджеров</p>
+			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
 			<button class="mybtn">Заказать сейчас</button>
 		</div>
