--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 					<tr> <td>ГЦ-125.100.6000.000-04</td> <td>155 000p</td> </tr>
 				</table>
 			</div>
-			<div class="animated fadeInUp buttons-delay"><a id="download-button" class="button hover animated" href="#">Заказать прямо сейчас!</a></div>
+			<div class="animated fadeInUp buttons-delay"><a id="download-button" class="button hover animated b24-web-form-popup-btn-4" href="#" >Заказать прямо сейчас!</a></div>
 			<div class="store-buttons animated fadeInUp buttons-delay"></div>
 		</div>
 		<div class="span7 animated fadeInRightBig animation-delay" style="padding-top: 100px;">
@@ -277,7 +277,7 @@
 		<div class="modal-footer">
 			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
-			<button class="mybtn">Заказать сейчас</button>
+			<button class="mybtn b24-web-form-popup-btn-4">Заказать сейчас</button>
 		</div>
 	</div>
 
@@ -328,7 +328,7 @@
 		<div class="modal-footer">
 			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
-			<button class="mybtn">Заказать сейчас</button>
+			<button class="mybtn b24-web-form-popup-btn-4">Заказать сейчас</button>
 		</div>
 	</div>
 
@@ -394,7 +394,7 @@
 		<div class="modal-footer">
 			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
-			<button class="mybtn">Заказать сейчас</button>
+			<button class="mybtn b24-web-form-popup-btn-4">Заказать сейчас</button>
 		</div>
 	</div>
 
@@ -445,7 +445,7 @@
 		<div class="modal-footer">
 			<p>Стоимость деталей можно уточнить у наших менеджеров. Если в списке нет подходящего Вам гидроцилиндра, то свяжитесь с нами!</p>
 			<!--button class="btn" data-dismiss="modal" aria-hidden="true">Закрыть</button-->
-			<button class="mybtn">Заказать сейчас</button>
+			<button class="mybtn b24-web-form-popup-btn-4">Заказать сейчас</button>
 		</div>
 	</div>
 
