--- a/index.html
+++ b/index.html
@@ -285,7 +285,7 @@
 	<div id="galich" class="modal hide fade" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
 		<div class="modal-header">
 			<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-			<h3 id="myModalLabel">Галичанин</h3>
+			<h3 id="myModalLabel">Другие модели автокранов</h3>
 		</div>
 		<div class="modal-body">
 			<table class="table table-striped table-hover">
@@ -295,33 +295,103 @@
 					<th>Каталожное название</th>
 				</tr>
 					<td>1.</td>
-					<td>Гидроцилиндр</td>
-					<td>КС-4572А.63.400-2-01А</td>
+					<td>Гидроопора</td>
+					<td>КС-6575.22.500</td>
 				</tr>
 				<tr>
 					<td>2.</td>
 					<td>Гидроцилиндр</td>
-					<td>КС-4572А.63.900-2-02А</td>
+					<td>КС-6575.40.400</td>
 				</tr>
 				<tr>
 					<td>3.</td>
 					<td>Гидроцилиндр</td>
-					<td>КС-55713-1К-1.63.900</td>
+					<td>КС-6575М.43.200</td>
 				</tr>
 				<tr>
 					<td>4.</td>
 					<td>Гидроцилиндр</td>
-					<td>КС-55713-1К-4.63.900-1</td>
+					<td>КС-6575.90.200</td>
 				</tr>
 				<tr>
 					<td>5.</td>
-					<td>Гидроцилиндр</td>
-					<td>КС-55713-1К-2.63.900</td>
+					<td>Гидроопора</td>
+					<td>КС-55719Д.12.100</td>
 				</tr>
 				<tr>
 					<td>6.</td>
+					<td>Гидроопора</td>
+					<td>КС-55719Д.22.200</td>
+				</tr>
+				<tr>
+					<td>7.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55719Е.22.300-1</td>
+				</tr>
+				<tr>
+					<td>8.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55719Е.40.400</td>
+				</tr>
+				<tr>
+					<td>9.</td>
+					<td>Гидроцилиндр</td>
+					<td>КС-55719Е.41.930</td>
+				</tr>
+				<tr>
+					<td>10.</td>
+					<td>Гидроцилиндр</td>
+					<td>ГЦ-140х125х6900.000</td>
+				</tr>
+				<tr>
+					<td>11.</td>
+					<td>Гидроопора</td>
+					<td>Ц-22.000А</td>
+				</tr>
+				<tr>
+					<td>12.</td>
 					<td>Гидроцилиндр</td>
 					<td>Ц-21.000-1-02А</td>
+				</tr>
+				<tr>
+					<td>13.</td>
+					<td>Гидроцилиндр</td>
+					<td>ГЦ-4.63.400</td>
+				</tr>
+				<tr>
+					<td>14.</td>
+					<td>Гидроцилиндр</td>
+					<td>ГЦ-1.63.900</td>
+				</tr>
+				<tr>
+					<td>15.</td>
+					<td>Гидроопора</td>
+					<td>КС-6575С.22.500</td>
+				</tr>
+				<tr>
+					<td>16.</td>
+					<td>Гидроцилиндр подъема</td>
+					<td>КС-6574.471.00.00.00А</td>
+				</tr>
+				<tr>
+					<td>17.</td>
+					<td>Гидроцилиндр телескопирования</td>
+					<td>ГЦ-140х125х6900.000</td>
+				</tr>
+				<tr>
+					<td>18.</td>
+					<td>Гидроцилиндр телескопирования</td>
+					<td>ГЦ-140х125х6900.000-01</td>
+				</tr>
+				<tr>
+					<td>19.</td>
+					<td>Гидроцилиндр телескопирования</td>
+					<td>КС-45724-8.63.900-2К-01</td>
+				</tr>
+				<tr>
+					<td>20.</td>
+					<td>Гидроцилиндр телескопирования</td>
+					<td>КС-45722.65.900</td>
 				</tr>
 			</table>
 		</div>
