Поправил метатеги и тайтл

--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>АвтокранГидроСервис</title>
+    <title>АвтокранГидроСервис. Гидроцилиндр КС на автокран Ивановец, Клинцы, Галичанин, Челябинец.</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="FlatDuplex is a grate Landing Page Based on Bootstrap Framework">
-    <meta name="author" content="mmaedche">
+    <meta name="description" content="Гарантия самой низкой цены на гидроцилиндры для отечественных автокранов. Доставка в короткие сроки.">
+    <meta name="author" content="АКГС">
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
@@ -110,7 +110,7 @@
 		</div>
 	<div class="row">
 		<div class="span5 text-center">
-			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилинры выдвижения стрелы:</b></p>  
+			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилиндры выдвижения стрелы:</b></p>  
 			<!--a href="#" class="scroll" id="infoslider">Узнайте больше»</a-->
 			<div class="animated fadeInUp buttons-delay">
 				<table class="table" style="font-size: 20px;">
