Вернул название заголовка

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>АвтокранГидроСервис. Гидроцилиндр КС на автокран Ивановец, Клинцы, Галичанин, Челябинец.</title>
+    <title>АвтокранГидроСервис</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Гарантия самой низкой цены на гидроцилиндры для отечественных автокранов. Доставка в короткие сроки.">
     <meta name="author" content="АКГС">
