Мелкие поправки текста

--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
     		<div class="span12">
 				<div class="alert alert-success" style="display:none;" id="msg">
 					<a class="close" onclick="hideAlert()">&times;</a>
-					<h3 class="text-center">Спасибо за заказ. Менеджер свяжется с Вами в ближайшее время.</h3>
+					<h3 class="text-center">Спасибо за заявку! Мы свяжется с Вами в ближайшее время!</h3>
 				</div>
     		</div>
     	</div>
@@ -189,7 +189,7 @@
 			<div class="row">		
 				<div class="span4">
 					<!--input type="text"  autocomplete="off" tabindex="0" name="entry.182612" value="" dir="auto" data-initial-dir="auto" data-initial-value=""-->
-					<input class="input-block-level" id="name" type="text" name="entry.182612" placeholder="Ваше имя / название организации">
+					<input class="input-block-level" id="name" type="text" name="entry.182612" placeholder="Ваше имя">
 				</div>
 				<div class="span4">						
 					<input class="input-block-level" id="phone" type="text" name="entry.2132901364" placeholder="Номер телефона">							
@@ -200,7 +200,7 @@
 			</div>
 			<div class="row">
 				<div class="span4">
-					<button type="submit" onclick="formSubmit()" style="width: inherit; height: 65px;">Оформить заказ</button>
+					<button type="submit" onclick="formSubmit()" style="width: inherit; height: 65px;">Оформить заявку</button>
 				</div>
 				<div class="span4">
 					<p> </p>
