--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 	<header class="container home-anchor">
 		<div class="row">
 			<div class="span12">
-				<h1 class="animated fadeInLeftBig animation-delay text-center" style="font-family: Open sans;"> Самые низкие цены на гидроцилиндры для отечественных автокранов</h1>
+				<h1 class="animated fadeInLeftBig animation-delay text-center" style="font-family: Open sans;"> Самые низкие цены на гидроцилиндры для Российских автокранов типа КС (Клинцы, Галичанин, Ивановец, Челябинец и другие модели)</h1>
 			</div>
 		</div>
 		<div class="row">
@@ -110,7 +110,7 @@
 		</div>
 	<div class="row">
 		<div class="span5 text-center">
-			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилиндры выдвижения стрелы:</b></p>  
+			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилиндры выдвижения стрелы по акции</b></p>  
 			<!--a href="#" class="scroll" id="infoslider">Узнайте больше»</a-->
 			<div class="animated fadeInUp buttons-delay">
 				<table class="table" style="font-size: 20px;">
@@ -845,7 +845,7 @@
 		<div class="row">
 			<div class="span12 text-center">
                 <div class="alert">
-                    <button type="button" class="close" data-dismiss="alert">&times;</button>
+                    <button type="button" class="close" data-dismiss="alert">&timeаs;</button>
 					<div>
                     <script id="bx24_form_inline" data-skip-moving="true">
 						(function(w,d,u,b){w['Bitrix24FormObject']=b;w[b] = w[b] || function(){arguments[0].ref=u;
