Добавил к картинкам слова ALT не для всех изображений

--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
 	<div class="container">
 		<div class="row mynavbar">
 			<div class="span6">
-					<img src="img/logo-left.png">
+					<img src="img/logo-left.png" alt="Автокран">
 			</div>
 			<div class="span6 hotline">
-					<img src="img/logo-right.png">
+					<img src="img/logo-right.png" alt="Купить гидроцилиндр">
 			</div>
 		</div>
 	</div>
@@ -135,13 +135,13 @@
 			<div class="notebookslider flexslider">
 			  <ul class="slides">
 			    <li>
-			      <img src="img/slide1.jpg" />
+			      <img src="img/slide1.jpg" alt="гидроцилиндр на автокран" />
 			    </li>
 			    <li>
-			      <img src="img/slide2.jpg" />
+			      <img src="img/slide2.jpg" alt="гидроцилиндр для автокрана" />
 			    </li>
 			    <li>
-			      <img src="img/slide3.jpg" />
+			      <img src="img/slide3.jpg" alt="гидроцилиндр Ивановец"/>
 			    </li>
 			  </ul>
 			</div>
@@ -560,7 +560,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/ivanovec.jpg" style="width: inherit;"> 
+							<img src="img/ivanovec.jpg" style="width: inherit;" alt="Автокран Ивановец"> 
 						</div>
 					</div>
 					<div class="span3">
@@ -570,7 +570,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/chelab.jpg" style="width: inherit;"> 
+							<img src="img/chelab.jpg" style="width: inherit;" alt="Автокран Челябинец"> 
 						</div>
 					</div>
 				</div>
@@ -582,7 +582,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/klinci.jpg" style="width: inherit;"> 
+							<img src="img/klinci.jpg" style="width: inherit;" alt="Автокран Клинцы"> 
 						</div>
 					</div>
 					<div class="span3">
@@ -592,7 +592,7 @@
 					</div>
 					<div class="span3">
 						<div class="img-kran">
-							<img src="img/glinchanin.jpg" style="width: inherit;"> 
+							<img src="img/glinchanin.jpg" style="width: inherit;" alt="Автокран Галичанин"> 
 						</div>
 					</div>
 				</div>
@@ -661,25 +661,25 @@
 				    <li>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/1.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/1.jpg" alt="Screenshot" />
+			            	<img src="img/pr/1.jpg" alt="Гидроцилиндр стрелы автокрана" />
 			            	<span class="img-overlay"></span>
 			          	</a> 	
 				      </div>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/2.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/2.jpg" alt="Screenshot" />
+			            	<img src="img/pr/2.jpg" alt="гидроцилиндр изготовление" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/3.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/3.jpg" alt="Screenshot" />
+			            	<img src="img/pr/3.jpg" alt="гидроцилиндр купить" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/4.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/4.jpg" alt="Screenshot" />
+			            	<img src="img/pr/4.jpg" alt="цилиндр выдвижения средней секции стрелы" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
@@ -687,25 +687,25 @@
 				    <li>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/5.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/5.jpg" alt="Screenshot" />
+			            	<img src="img/pr/5.jpg" alt="Цилиндр выдвижения автокран" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/6.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/6.jpg" alt="Screenshot" />
+			            	<img src="img/pr/6.jpg" alt="Автомобильный кран гидроцилиндр" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/7.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/7.jpg" alt="Screenshot" />
+			            	<img src="img/pr/7.jpg" alt="Гидроцилиндр КС" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/8.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/8.jpg" alt="Screenshot" />
+			            	<img src="img/pr/8.jpg" alt="Гидроцилиндр кс 55713" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
@@ -713,7 +713,7 @@
 				    <li>
 				      <div class="span3 gallery-img">
 				      	<a href="img/pr/9.jpg" data-lightbox="roadtrip">
-			            	<img src="img/pr/9.jpg" alt="Screenshot" />
+			            	<img src="img/pr/9.jpg" alt="Гидроцилиндр на автомобильный кран" />
 			            	<span class="img-overlay"></span>
 			          	</a>
 				      </div>
