--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Гарантия самой низкой цены на гидроцилиндры для отечественных автокранов. Доставка в короткие сроки.">
     <meta name="author" content="АКГС">
+	<meta name="keywords" content="гидроцилиндр, автокран, Ивановец, Галичанин, Клинцы, КС, Гидроцилиндр КС, 55713">
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
