--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta charset="utf-8">
     <title>АвтокранГидроСервис</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Гарантия самой низкой цены на гидроцилиндры для отечественных автокранов. Доставка в короткие сроки.">
+    <meta name="description" content="Гидроцилиндр КС автокран купить">
     <meta name="author" content="АКГС">
-	<meta name="keywords" content="гидроцилиндр, автокран, Ивановец, Галичанин, Клинцы, КС, Гидроцилиндр КС, 55713">
+	<meta name="keywords" content="гидроцилиндр, автокран, Ивановец, Галичанин, Клинцы, КС, Гидроцилиндр КС, 55713, автомобильный кран">
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
