Удалил комментарий из - под цикла производства, цикл производства гидроцилиндров

--- a/index.html
+++ b/index.html
@@ -652,8 +652,7 @@
     	<div class="container gallery-anchor">
     		<div class="row">
     			<div class="span12">
-    				<h2 class="text-center">Цикл производства</h2>
-    				<!--p>Еще место для текста, например для описания</p-->
+    				<h2 class="text-center">Цикл производства гидроцилиндров</h2>
     			</div>
 			</div>
 			<div class="row">
