Правка формы заявки

--- a/index.html
+++ b/index.html
@@ -190,13 +190,13 @@
 			<div class="row">		
 				<div class="span4">
 					<!--input type="text"  autocomplete="off" tabindex="0" name="entry.182612" value="" dir="auto" data-initial-dir="auto" data-initial-value=""-->
-					<input class="input-block-level" id="name" type="text" name="entry.182612" placeholder="Ваше имя">
+					<input class="input-block-level" id="name" type="text" name="entry.182612" placeholder="Как к Вам обращаться?">
 				</div>
 				<div class="span4">						
-					<input class="input-block-level" id="phone" type="text" name="entry.2132901364" placeholder="Номер телефона">							
+					<input class="input-block-level" id="phone" type="text" name="entry.2132901364" placeholder="Ваш номер телефона">							
 				</div>
 				<div class="span4">
-					<input id="detail" class="input-block-level" type="text" name="entry.1554736692" placeholder="Название детали">
+					<input id="detail" class="input-block-level" type="text" name="entry.1554736692" placeholder="Какой гидроцилиндр Вам требуется?">
 				</div>
 			</div>
 			<div class="row">
