Правка текста кнопки заявки

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			</div>
 			<div class="row">
 				<div class="span4">
-					<button type="submit" onclick="formSubmit()" style="width: inherit; height: 65px;">Оформить заявку</button>
+					<button type="submit" onclick="formSubmit()" style="width: inherit; height: 65px;">Получить бесплатную консультацию по телефону!</button>
 				</div>
 				<div class="span4">
 					<p> </p>
