--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 		</div>
 	<div class="row">
 		<div class="span5 text-center">
-			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилиндры выдвижения стрелы по акции</b></p>  
+			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилиндры выдвижения стрелы (действующие цены)</b></p>  
 			<!--a href="#" class="scroll" id="infoslider">Узнайте больше»</a-->
 			<div class="animated fadeInUp buttons-delay">
 				<table class="table" style="font-size: 20px;">
@@ -157,7 +157,7 @@
     		<div class="span12">
 				<div class="alert alert-success" style="display:none;" id="msg">
 					<a class="close" onclick="hideAlert()">&times;</a>
-					<h3 class="text-center">Спасибо за заявку! Мы свяжется с Вами в ближайшее время!</h3>
+					<h3 class="text-center">Спасибо за заявку! Мы свяжемся с Вами в ближайшее время!</h3>
 				</div>
     		</div>
     	</div>
@@ -193,7 +193,7 @@
 					<input class="input-block-level" id="name" type="text" name="entry.182612" placeholder="Как к Вам обращаться?">
 				</div>
 				<div class="span4">						
-					<input class="input-block-level" id="phone" type="text" name="entry.2132901364" placeholder="Ваш номер телефона">							
+					<input class="input-block-level" id="phone" type="text" name="entry.2132901364" placeholder="Ваш номер телефона?">							
 				</div>
 				<div class="span4">
 					<input id="detail" class="input-block-level" type="text" name="entry.1554736692" placeholder="Какой гидроцилиндр Вам требуется?">
@@ -201,7 +201,7 @@
 			</div>
 			<div class="row">
 				<div class="span4">
-					<button type="submit" onclick="formSubmit()" style="width: inherit; height: 65px;">Получить бесплатную консультацию по телефону!</button>
+					<button type="submit" onclick="formSubmit()" style="width: inherit; height: 65px;">Получить бесплатную консультацию по телефону</button>
 				</div>
 				<div class="span4">
 					<p> </p>
