Убрал один ГЦ из списка, поправил текст

--- a/index.html
+++ b/index.html
@@ -111,11 +111,10 @@
 		</div>
 	<div class="row">
 		<div class="span5 text-center">
-			<p class="animated fadeInLeftBig animation-delay"><b>Гидроцилиндры выдвижения стрелы (действующие цены)</b></p>  
+			<p class="animated fadeInLeftBig animation-delay"><b>Пример наших низких цен! В наличии есть все гидроцилиндры, свяжитесь с нами!</b></p>  
 			<!--a href="#" class="scroll" id="infoslider">Узнайте больше»</a-->
 			<div class="animated fadeInUp buttons-delay">
 				<table class="table" style="font-size: 20px;">
-					<tr> <td>КС-55713-1В.63.900-1</td> <td>206 500p</td> </tr>
 					<tr> <td>КС-45724-8.63.900-3К-01</td> <td>118 900p</td> </tr>
 					<tr> <td>КС-55713-1К-1.63.900</td> <td>132 500p</td> </tr>
 					<tr> <td>КС-55713-1К-2.63.900-2К</td> <td>134 300p</td> </tr>
