--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
 	<header class="container home-anchor">
 		<div class="row">
 			<div class="span12">
-				<h1 class="animated fadeInLeftBig animation-delay text-center" style="font-family: Open sans;"> Самые низкие цены на гидроцилиндры для Российских автокранов типа КС (Клинцы, Галичанин, Ивановец, Челябинец и другие модели)</h1>
+				<h1 class="animated fadeInLeftBig animation-delay text-center" style="font-family: Open sans;">Гидроцилиндры для Российских автокранов типа КС (Клинцы, Галичанин, Ивановец, Челябинец и другие модели)</h1>
 			</div>
 		</div>
 		<div class="row">
