Добавил метатег яндекса

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="description" content="Гидроцилиндр КС автокран купить">
     <meta name="author" content="АКГС">
 	<meta name="keywords" content="гидроцилиндр, автокран, Ивановец, Галичанин, Клинцы, КС, Гидроцилиндр КС, 55713, автомобильный кран">
+	<meta name="yandex-verification" content="7f5b13f3128bdf2e" />
 
 		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
 
